# dfir-iris-cortex-v2

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
cortex/config/: application.conf  logback.xml
iris_module/: README.md  pyproject.toml
iris_module/iris_cortex_analyzer_module/: IrisCortexAnalyzerConfig.py  IrisCortexAnalyzerInterface.py  __init__.py
iris_module/iris_cortex_analyzer_module/cortex_handler/: cortex_handler.py
patches/: module_handler.py  tasks.py  updater.py  util.py
scripts/: apply_patches.sh  backup.sh  detect_os.sh  init-extensions.sql  install_docker.sh  install_module.sh  setup.sh  update.sh
